<resources>
    <string name="navigation_drawer_open">Abrir menú</string>
    <string name="navigation_drawer_close">Cerrar menú</string>
    <string name="app_name">Filmbook</string>
    <string name="toolbar_title">Welcome to Filmbook</string>
    <string name="settings_title">Settings</string>
    <string name="logging">Iniciando Sesión</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="btn_click_me">Click Me</string>
    <string name="description_text">The social media of movies</string>
    <string name="nav_header_image_desc">Navigation Header Image</string>
    <string name="error_generic">Something went wrong. Please try again later.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_greeting">Bienvenido!</string>
    <string name="user_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="not_registered_text">No estás registrado? Regístrate</string>
    <string name="forget_password">Olvidaste la contraseña?</string>
    <string name="register">Introduce tus datos</string>
    <string name="btRegister">Regístrate</string>
    <string name="alreadyRegisteredWarning">Ya estás registrado? Inicia Sesión</string>
    <string name="confirmPassword">Confirma la contraseña</string>
    <string name="password">Contraseña</string>
    <string name="username">Usuario</string>
    <string name="mail">Correo</string>
    <string name="passwordRequired">La contraseña es obligatoria</string>
    <string name="emailRequired">El correo es obligatorio</string>
    <string name="userRequired">El usuario es obligatorio</string>
    <string name="registerOK">¡Registro exitoso!</string>
    <string name="registerKO">"Fallo en el registro en Firestore: "</string>
    <string name="mailAlreadyInUse">El correo ya está en uso</string>
    <string name="authKO">"Fallo en la autenticación: "</string>
    <string name="loginOK">¡Login exitoso!</string>
    <string name="loginKO">"Error en el login: "</string>
    <string name="view_all_list">Ver Todo</string>
    <string name="search">Buscador</string>
    <string name="hint_search">Busca algo</string>
    <string name="mock_film_description">Blonde Betty Elms has only just arrived in Hollywood to become a movie star when she meets an enigmatic brunette with amnesia. Meanwhile, as the two set off to solve the second woman\'s identity, filmmaker Adam Kesher runs into ominous trouble while casting his latest project.</string>
    <string name="original_title">Título original:</string>
    <string name="director">Director:</string>
    <string name="release_date">Estreno:</string>
    <string name="similar_films">Películas similares:</string>
    <string name="keywords">Keywords:</string>
    <string name="sinopsis">Sinopsis:</string>
    <string name="mi_diary">Mi diario</string>
    <string name="friend_list">Lista de amigos</string>
    <string name="add">add</string>
    <string name="my_profile">Mi perfil</string>
    <string name="list_title">Título de la lista</string>
    <string name="rf" />
    <string name="film_poster">Film Poster</string>
    <string name="newList">Nueva Lista</string>
    <string name="escribe_un_nombre_para_la_lista">Escribe un nombre para la lista</string>
    <string name="addToList">Añadir a lista</string>
    <string name="newReview">Nueva Review</string>
    <string name="reviewTitle">Título de la Review</string>
    <string name="save">Guardar</string>
    <string name="descripci_n_de_la_review">Descripción de la Review</string>
    <string name="escribe_tu_review">Escribe tu Review...</string>
    <string name="search_by_username">Search by username</string>
    <string name="nuevo_t_tulo">Nuevo título</string>

</resources>
