<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="97dp"
        android:layout_marginTop="32dp"
        android:background="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login_greeting"
        android:textFontWeight="600"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:id="@+id/linearLayoutUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginBottom="57dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginGreeting"
        app:layout_constraintVertical_bias="0.633"
        tools:layout_editor_absoluteX="22dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/user_hint"
            android:inputType="text"
            android:padding="12dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="281dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="354dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:gravity="right"
            android:textSize="12sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginHorizontal="22dp"
        android:text="@string/login_button"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="544dp"
        android:textSize="18sp"
        android:textColor="#eeeeee"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutUserPass"
        app:layout_constraintBottom_toTopOf="@id/register_link"/>

    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="56dp"
        android:text="@string/not_registered_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="12sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
