<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.NewReviewFragment"
    android:layout_marginHorizontal="22dp" >


    <TextView
        android:id="@+id/tvNewReview"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/newReview"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etNewReviewTitle"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/reviewTitle"
        android:inputType="text"
        android:paddingStart="26dp"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etNewReviewDescription"
        style="@style/CustomTextArea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/descripci_n_de_la_review"
        android:inputType="text"
        android:paddingStart="26dp"
        app:layout_constraintBottom_toTopOf="@+id/btAddNewReview"
        app:layout_constraintTop_toBottomOf="@+id/etNewReviewTitle"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etReviewDate"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="false"
        android:hint="Selecciona fecha"
        app:layout_constraintBottom_toTopOf="@+id/etNewReviewTitle"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        tools:layout_editor_absoluteX="0dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewReview" />

    <Button
        android:id="@+id/btAddNewReview"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

