<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.RegisterActivity"
    android:id="@+id/registerActivity">

    <ImageView
        android:id="@+id/filmbookLogotipoRegister"
        android:layout_width="181dp"
        android:layout_height="97dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/filmbook_logotipo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/registerFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/filmbookLogotipoRegister">

        <TextView
            android:id="@+id/tvRegister"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmbookLogotipoRegister" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextColor="?attr/colorSecondary"
            android:hint="@string/mail"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:inputType="textEmailAddress"
                style="@style/CustomEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:hintTextColor="?attr/colorSecondary"
            android:hint="@string/username"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:inputType="text"
                style="@style/CustomEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:endIconMode="password_toggle"
            app:hintTextColor="?attr/colorSecondary"
            android:hint="@string/password"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:inputType="textPassword"
                style="@style/CustomEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:hintTextColor="?attr/colorSecondary"
            android:hint="@string/confirmPassword"
            app:boxBackgroundMode="filled"
            app:boxBackgroundColor="@color/black"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="26dp"
                android:paddingEnd="26dp"
                android:inputType="textPassword"
                style="@style/CustomEditText" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btRegister"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:text="@string/btRegister"
        app:layout_constraintBottom_toTopOf="@id/login_link"
        app:layout_constraintTop_toBottomOf="@id/registerFormLayout"
        tools:layout_editor_absoluteX="22dp" />

    <TextView
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="56dp"
        style="@style/textSM_detail"
        android:text="@string/alreadyRegisteredWarning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
