<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.AddFilmFragment">

    <LinearLayout
        android:id="@+id/lnLyAddFilmToList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btAddNewFilmToList"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="22dp">

        <TextView
            android:id="@+id/tvLista"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/newList"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etAddFilmToList"
            style="@style/CustomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:paddingStart="26dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchAddFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:layout_editor_absoluteX="22dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btAddNewFilmToList"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/addToList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="22dp"

        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>